[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ressources/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/DialogueBoxHandler.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Sprites/9Part3Alpha.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Sprites/arrow.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Character" type="Node2D"]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 18.0
margin_top = 562.0
margin_right = 800.0
margin_bottom = 705.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 14.0
margin_top = 14.0
margin_right = 759.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
meta_underlined = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="NinePatchRect"]
wait_time = 0.05
autostart = true

[node name="Arrow" type="TextureRect" parent="NinePatchRect"]
margin_left = 740.881
margin_top = 107.881
margin_right = 765.881
margin_bottom = 129.881
texture = ExtResource( 5 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="texte_fini" from="NinePatchRect/Label" to="NinePatchRect/Arrow" method="_on_Label_texte_fini"]
[connection signal="texte_started" from="NinePatchRect/Label" to="NinePatchRect/Arrow" method="_on_Label_texte_started"]
[connection signal="timeout" from="NinePatchRect/Timer" to="NinePatchRect/Label" method="_on_Timer_timeout"]
[connection signal="gui_input" from="NinePatchRect/Arrow" to="NinePatchRect/Label" method="_on_Arrow_gui_input"]
